--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<bukkitVersion>1.5.2-R0.2-SNAPSHOT</bukkitVersion>
+		<bukkitVersion>1.5.2-R1.0</bukkitVersion>
 		<buildNumber>b130</buildNumber>
 	</properties>
 
