Update to build 149
- Added bukkit-repo
- Added oss-sonatype-repo
- Added 'backpack clear <player>' command
- Fix 'backpack reload' not checking for permission
- Namespace changed from com.almuramc.backpack.bukkit to simply com.almuramc.backpack
- Removed redundant listing of build number
- Removed spout-related project files
- Removed spout-repo
- Updated to maven compiler 3.1
- Updated to Bukkit/SpoutcraftPlugin 1.6.4-R2.1

Signed-off-by: Steven Downer <grinch@outlook.com>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
 name: ${project.name}
-version: ${buildNumber}
+version: ${project.version}
 description: ${project.description}
 author: ${project.organization.name}
 website: ${project.organization.url}
 
-main: com.almuramc.backpack.bukkit.BackpackPlugin
+main: com.almuramc.backpack.BackpackPlugin
 depend: [Vault]
 softdepend: [Spout]
 load: POSTWORLD
@@ -15,7 +15,7 @@ commands:
         usage: /backpack [command] [arguments]
 permissions:
     backpack.admin:
-        description: Gives you access to /backpack clear player
+        description: Gives access to the clear and reload commands.
         default: op
     backpack.use:
         description: Allows users to access backpack.
