--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,14 @@
 	<!-- Project information -->
 	<groupId>com.almuramc</groupId>
 	<artifactId>backpack</artifactId>
-	<version>b148</version>
+	<version>b149</version>
 	<name>Backpack</name>
 	<url>http://www.almuramc.com</url>
-	<description>Backpack is a plugin for Bukkit/Spout that gives users a handy backpack.</description>
+	<description>Backpack is a plugin for Bukkit that gives users a handy backpack.</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<bukkitVersion>1.6.2-R1.0</bukkitVersion>
-		<buildNumber>b131</buildNumber>
+		<bukkitVersion>1.6.4-R2.1-SNAPSHOT</bukkitVersion>
 	</properties>
 
 	<!-- Organization -->
@@ -33,12 +32,16 @@
 	<!-- Repository locations -->
 	<repositories>
 		<repository>
-			<id>vault-repo</id>
-			<url>http://ci.herocraftonline.com/plugin/repository/everything</url>
-		</repository>	
+			<id>bukkit-repo</id>
+			<url>http://repo.bukkit.org/content/groups/public/</url>
+		</repository>
 		<repository>
-			<id>spout-repo</id>
-			<url>http://repo.spout.org</url>
+			<id>oss-sonatype-repo</id>
+			<url>https://oss.sonatype.org/content/repositories/public/</url>
+		</repository>
+		<repository>
+			<id>vault-repo</id>
+			<url>http://ci.herocraftonline.com/plugin/repository/everything/</url>
 		</repository>
 	</repositories>
 
@@ -51,21 +54,21 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.getspout</groupId>
-			<artifactId>spoutplugin</artifactId>
-			<version>dev-SNAPSHOT</version>
+			<groupId>org.spoutcraft</groupId>
+			<artifactId>spoutcraftplugin</artifactId>
+			<version>${bukkitVersion}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.milkbowl.vault</groupId>
 			<artifactId>Vault</artifactId>
-			<version>1.2.26-SNAPSHOT</version>
+			<version>1.2.27-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
 	<build>
-		<defaultGoal>clean install</defaultGoal>
+		<defaultGoal>clean package install</defaultGoal>
 		<!-- Resources -->
 		<resources>
 			<resource>
@@ -83,7 +86,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.4</version>
+				<version>3.1</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
